<resources>
    <string name="app_name" translatable="false">Talk to me</string>
    <string name="startIcon_version">"Version: "</string>
    <string name="startIcon_bannedHelp">\n\n\nIf you have any further questions about the ban, or to request a unban, please email:\nLnZpk.Dev@Gmail.com</string>
    <string name="startIcon_banned">You have been banned!</string>
    <string name="startIcon_bannedReason">Reason:\n</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username</string>
    <string name="register_hint_confirmPass">Confirm password</string>
    <string name="register_createAcc">Create a new account</string>
    <string name="register_usernameCantChanged">The username cannot be changed.</string>
    <string name="error_wrongPassword">Wrong password.</string>
    <string name="loginAndRegister_userDoesntExists">This user doesn\'t exists.</string>
    <string name="loginAndRegister_passwordIsEmpty">Password cannot be empty.</string>
    <string name="loginAndRegister_noSpaces">No spaces allowed.</string>
    <string name="loginAndRegister_usernameError4">This username is in use in the app and cannot be used.</string>
    <string name="startFirst_login">Login</string>
    <string name="loginAndRegister_usernameError2">Please enter a username!</string>
    <string name="loginAndRegister_usernameError1">No special characters allowed.</string>
    <string name="loginAndRegister_usernameError3">No umlauts allowed.</string>
    <string name="startFirst_createAcc">Create account</string>
    <string name="startFirst_ask2">I want to create a new account:</string>
    <string name="startFirst_gotAcc">I already have an account:</string>
    <string name="startFirst_ask">Do you already have an account with us or do you want to create a new one?</string>
    <string name="startFirst_welcome">Welcome to Talk to me!</string>
    <string name="startIcon_appDeactivated">The app is currently disabled.</string>
    <string name="startIcon_loginRegister">Login/Register</string>
    <string name="startIcon_profileNotFoundHelp">Your profile appears to have been deleted. Please register again!</string>
    <string name="startIcon_profileNotFound">Profile not found.</string>
    <string name="loginAndRegister_enterUsername">Please enter your username!</string>
    <string name="loginAndRegister_passwordError1">The password must be at least 8 characters long.</string>
    <string name="loginAndRegister_passwordError2">Please confirm your password!</string>
    <string name="loginAndRegister_passwordError3">Passwords do not match.</string>
    <string name="loginAndRegister_nameEmpty">Please enter a name!</string>
    <string name="loginAndRegister_userExists">This user already exists.</string>
    <string name="uploadProfilePicTooBig">The picture is too big.</string>
    <string name="uploadProfilePicError">There was an error uploading the profile picture.</string>
    <string name="default_info">I use Talk to me.</string>
    <string name="login_title">Sign in with an existing account</string>
    <string name="agreeDataProtection_title">Agree to Privacy Policy and Terms of Service</string>
    <string name="confirmDataProtection_declaration">To use the app, you must agree to the Privacy Policy and Terms of Service to protect yourself and others.</string>
    <string name="termsAndConditions_title">Terms of Service</string>
    <string name="confirmDataProtection_confirm">Agree and continue</string>
    <string name="navbar_chats">Chats</string>
    <string name="navbar_groups">Groups</string>
    <string name="navbar_posts">Posts</string>
    <string name="home_joinPublicGroups">Join public groups</string>
    <string name="home_yourGroups">Your groups</string>
    <string name="home_noGroupsText">You have not joined any group yet.</string>
    <string name="home_noPosts">There are no posts!\nClick the pencil below to create a new post.</string>
    <string name="home_noChatsText">You don\'t have any chats yet!\nClick on the contact icon below to start a new chat.</string>
    <string name="home_postsNewsEdited">" • News • Edited"</string>
    <string name="home_postEdited">" • Edited"</string>
    <string name="home_postNews">" • News"</string>
    <string name="home_noInternet">No Internet connection.</string>
    <string name="home_noInternetHelp">The app requires an internet connection to retrieve the data.\nThe error sometimes occurs when leaving the app open in the background. If that\'s the case, just click \"Retry\".</string>
    <string name="retry">Retry</string>
    <string name="home_errorConnection">\nDue to an error, the server cannot be accessed at this time. Please try again later!</string>
    <string name="chats_deletedProfile">Deleted profile</string>
    <string name="settings">Settings</string>
    <string name="message_read">Read</string>
    <string name="message_delivered">Delivered</string>
    <string name="settings_myProfile">My profile</string>
    <string name="mainSettings_moreSettings">More settings</string>
    <string name="mainSettings_privacyTitle">Privacy</string>
    <string name="mainSettings_privacySummary">Privacy, Legal information</string>
    <string name="mainSettings_securityTitle">Security</string>
    <string name="mainSettings_securitySummary">Fingerprint lock, 2FA</string>
    <string name="loading">Loading...</string>
    <string name="mainSettings_chatsTitle">Chats</string>
    <string name="mainSettings_chatsSummary">Background, Theme, Colors</string>
    <string name="mainSettings_notificationsTitle">Notifications</string>
    <string name="mainSettings_notificationsSummary">Chats, Requests</string>
    <string name="mainSettings_postsTitle">Posts</string>
    <string name="mainSettings_postsSummary">My posts, Liked, Hidden posts</string>
    <string name="mainSettings_helpTitle">Help and infos</string>
    <string name="mainSettings_helpSummary">Feedback, App info</string>
    <string name="hint_name">Name</string>
    <string name="profileSettings_nameHelper">This is your display name, it\'s visible to everyone.</string>
    <string name="hint_info">Info</string>
    <string name="profileSettings_saveChanges">Save changes</string>
    <string name="privacySettings_privacyTitle">Privacy</string>
    <string name="privacySettings_publicProfileTitle">Public profile</string>
    <string name="privacySettings_publicProfileSummary">If activated, you are visible in the public user list</string>
    <string name="privacySettings_everyoneMessagesTitle">Anyone can message you</string>
    <string name="privacySettings_everyoneMessagesSummary">When disabled, only users can message you.</string>
    <string name="privacySettings_publicInfoTitle">Anyone can read your info</string>
    <string name="privacySettings_publicInfoSummary">When disabled, only users can see your info.</string>
    <string name="privacySettings_readReceiptTitle">Read receipts</string>
    <string name="privacySettings_lastOnlineTitle">Last online</string>
    <string name="privacySettings_blockedUserTitle">Blocked users</string>
    <string name="privacySettings_legalTitle">Legal information</string>
    <string name="dataProtection_title">Privacy Policy</string>
    <string name="privacySettings_revokeTitle">Revoke consent</string>
    <string name="securitySettings_fingerprintTitle">Fingerprint lock</string>
    <string name="securitySettings_fingerprintSummary">Lock app with fingerprint</string>
    <string name="securitySettings_2faTitle">2-factor authentication</string>
    <string name="chatsSettings_displayTitle">Display</string>
    <string name="chatsSettings_backgroundTitle">Chat background</string>
    <string name="chatsSettings_themeTitle">Theme</string>
    <string name="chatSettings_themeApply">Apply</string>
    <string name="chatSettings_applyColorsTitle">Apply custom colors</string>
    <string name="chatSettings_applyColorsSummary1">The default colors are applied.</string>
    <string name="chatSettings_applyColorsSummary2">Your colors are applied.</string>
    <string name="chatSettings_colorsTitle">Custom colors</string>
    <string name="chatSettings_colorsSummary">Personalize colors</string>
    <string name="chatSettings_chatSettingsTitle">Chat settings</string>
    <string name="chatSettings_enterTitle">Enter is send</string>
    <string name="chatSettings_enterSummary">Enter key sends the message.</string>
    <string name="themeDark">Dark</string>
    <string name="themeLight">Light</string>
    <string name="notifySettings_receiveTitle">Receive notifications</string>
    <string name="notifySettings_reciveFromTitle">Receive notifications from...</string>
    <string name="notifySettings_messagesTitle">Messages</string>
    <string name="chatSettings_requestsTitle">Requests</string>
    <string name="postSettings_myPostsTitle">My posts</string>
    <string name="postSettings_myPostsSummary">Posts you have uploaded</string>
    <string name="postSettings_likedTitle">Liked</string>
    <string name="postSettings_likedSummary">Posts you\'ve liked</string>
    <string name="postSettings_hiddenTitle">Hidden posts</string>
    <string name="postSettings_hiddenSummary">Posts you have hidden or from blocked users</string>
    <string name="helpSettings_feedbackTitle">Give feedback</string>
    <string name="helpSettings_feedbackSummary">Report a bug or make a suggestion</string>
    <string name="helpSettins_appInfoTitle">App info</string>
    <string name="appAuth_promptTitle">Confirm your identity</string>
    <string name="appAuth_promptDescr">Use your fingerprint to verify your identity.</string>
    <string name="appAuth_touchSensor">Touch the fingerprint sensor!</string>
    <string name="appAuth_welcome">Welcome!</string>
    <string name="appAuth_appUnlocked">Talk to me unlocked.</string>
    <string name="appAuth_noMatch">No match.</string>
    <string name="appAuth_canceledByUser">Fingerprint authentication canceled by user.</string>
    <string name="appAuth_appLocked">Talk to me locked.</string>
    <string name="languages_title">Message language</string>
    <string name="languages_systemDefault">System default</string>
    <string name="you">You</string>
    <string name="contextMenu_messageDelete">Delete message</string>
    <string name="deleteMessage_all">Delete for everyone</string>
    <string name="deleteMessage_success">Message deleted</string>
    <string name="deleteMessage_failure">An error occurred while deleting the message</string>
    <string name="deleteMessage_me">Delete for me</string>
    <string name="copyMessage_success">Message text copied</string>
    <string name="replyMessage_deletedTitle">Deleted message</string>
    <string name="replyMessage_deletedSummary">The replied message has been deleted</string>
    <string name="contextMenu_messageReply">Reply</string>
    <string name="contextMenu_messageEdit">Edit</string>
    <string name="contextMenu_messageCopy">Copy text</string>
    <string name="inviteMessage_deletedTitle">Group deleted</string>
    <string name="contextMenu_comments">Comments</string>
    <string name="contextMenu_hidePost">Hide post</string>
    <string name="contextMenu_likes">Likes</string>
    <string name="fingerprint_activate">Activate fingerprint lock</string>
    <string name="fingerprint_lockTime">Lock...</string>
    <string name="fingerprint_customTitle">Custom time</string>
    <string name="fingerprint_customSummary">(in minutes)</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_help">Submit your idea or feedback below.</string>
    <string name="hint_feedbackTitle">Feedback title</string>
    <string name="hint_feedbackText">Your idea or feedback</string>
    <string name="feedback_buttonSend">Send feedback</string>
    <string name="privacySettings_showOnlineTitle">Show online status</string>
</resources>