<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.ljz.talktome.old.customThings.MyPreferenceCategory android:title="@string/privacySettings_privacyTitle">

        <de.ljz.talktome.old.customThings.MySwitchPreference
            android:key="public_profile"
            android:summary="@string/privacySettings_publicProfileSummary"
            android:title="@string/privacySettings_publicProfileTitle" />
        <de.ljz.talktome.old.customThings.MySwitchPreference
            android:key="public_chat"
            android:summary="@string/privacySettings_everyoneMessagesSummary"
            android:title="@string/privacySettings_everyoneMessagesTitle" />
        <de.ljz.talktome.old.customThings.MySwitchPreference
            android:key="public_info"
            android:summary="@string/privacySettings_publicInfoSummary"
            android:title="@string/privacySettings_publicInfoTitle" />
        <de.ljz.talktome.old.customThings.MySwitchPreference
            android:key="markAsRead"
            android:title="@string/privacySettings_readReceiptTitle" />
        <de.ljz.talktome.old.customThings.MySwitchPreference
            android:key="showOnline"
            android:title="@string/privacySettings_showOnlineTitle"
            app:summary="UNDER DEVELOPMENT" />
        <ListPreference
            android:defaultValue="everyone"
            android:entries="@array/lastOnline"
            android:entryValues="@array/lastOnlineValues"
            android:key="lastOnline"
            android:title="@string/privacySettings_lastOnlineTitle" />
        <Preference
            app:key="blockedUser"
            app:summary="{NUM}"
            app:title="@string/privacySettings_blockedUserTitle" />
    </de.ljz.talktome.old.customThings.MyPreferenceCategory>
    <de.ljz.talktome.old.customThings.MyPreferenceCategory android:title="@string/privacySettings_legalTitle">
        <Preference
            android:key="privacy"
            android:title="@string/dataProtection_title" />
        <Preference
            android:key="agb"
            android:title="@string/termsAndConditions_title" />
        <Preference
            android:key="takeConfirmBack"
            android:title="@string/privacySettings_revokeTitle" />
    </de.ljz.talktome.old.customThings.MyPreferenceCategory>
</PreferenceScreen>