<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference
        android:id="@+id/preference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="yourPosts"
        app:summary="@string/postSettings_myPostsSummary"
        app:title="@string/postSettings_myPostsTitle" />
    <Preference
        app:key="likedPosts"
        app:summary="@string/postSettings_likedSummary"
        app:title="@string/postSettings_likedTitle" />
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:key="hiddenPosts"
        app:summary="@string/postSettings_hiddenSummary"
        app:title="@string/postSettings_hiddenTitle" />
    <!-- TODO
    <Preference
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:enabled="false"
        app:key="postsInterests"
        app:summary="Deine Interessen für Beitrag-Vorschläge"
        app:title="Interessen (Comming soon)" />
        -->
</PreferenceScreen>