<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <de.ljz.talktome.old.customThings.MySwitchPreference
        android:key="getNotification"
        android:title="@string/notifySettings_receiveTitle"
        app:iconSpaceReserved="false" />
    <de.ljz.talktome.old.customThings.MyPreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/notifySettings_reciveFromTitle">
        <de.ljz.talktome.old.customThings.MySwitchPreference
            app:iconSpaceReserved="false"
            app:key="notiMessages"
            app:title="@string/notifySettings_messagesTitle" />
        <de.ljz.talktome.old.customThings.MySwitchPreference
            app:iconSpaceReserved="false"
            app:key="notiRequests"
            app:title="@string/chatSettings_requestsTitle" />
    </de.ljz.talktome.old.customThings.MyPreferenceCategory>
</PreferenceScreen>