<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:summary="Die App wird nach dem du ">

    <com.lnzpk.chat_app.old.customThings.MySwitchPreference
        android:key="fingerprint_switch"
        app:title="@string/fingerprint_activate" />
    <ListPreference
        android:defaultValue="instantly"
        android:entries="@array/fingerprint_times"
        android:entryValues="@array/fingerprint_new_values"
        android:key="fingerprint_time"
        android:showDividers="middle"
        android:title="@string/fingerprint_lockTime"
        app:allowDividerAbove="true" />
    <SeekBarPreference
        android:max="60"
        android:showDividers="middle"
        app:allowDividerAbove="true"
        app:key="custom_time"
        app:min="1"
        app:showSeekBarValue="true"
        app:summary="@string/fingerprint_customSummary"
        app:title="@string/fingerprint_customTitle" />
</PreferenceScreen>