<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/like"
        android:icon="@drawable/not_liked"
        android:title="@string/contextMenu_likes"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:enabled="false"
        android:icon="@drawable/share02"
        android:title="Teilen"
        android:visible="false" />
    <item
        android:id="@+id/comments"
        android:icon="@drawable/comment"
        android:title="@string/contextMenu_comments" />
    <item
        android:id="@+id/block_post"
        android:icon="@drawable/block"
        android:iconTint="#FF0000"
        android:title="@string/contextMenu_hidePost" />
</menu>