<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeChats"
        android:icon="@drawable/mitteilungen"
        android:title="@string/navbar_chats"
        app:showAsAction="always" />
    <item
        android:id="@+id/homeGroups"
        android:icon="@drawable/group_pic"
        app:showAsAction="never"
        android:title="@string/navbar_groups" />
    <item
        android:id="@+id/homeArticle"
        android:icon="@drawable/new_posts"
        android:title="@string/navbar_posts"
        app:showAsAction="always" />
    <!--<item android:title="Talks"
        app:showAsAction="always"
        android:icon="@drawable/conversation"/>-->
</menu>